style: unify nav buttons design, fix dark mode hover colors & stabilize transitions

--- a/css/base.css
+++ b/css/base.css
@@ -20,7 +20,7 @@
 .post-preview {
     animation: bodyshow 0.9s linear;
 }
-@-moz-keyframes 'bodyshow' {
+@-moz-keyframes bodyshow {
     0% {
         top: -60px;
         opacity: 0;
@@ -38,7 +38,7 @@
         opacity: 1;
     }
 }
-@-webkit-keyframes 'bodyshow' {
+@-webkit-keyframes bodyshow {
     0% {
         top: -60px;
         opacity: 0;
@@ -56,7 +56,7 @@
         opacity: 1;
     }
 }
-@-o-keyframes 'bodyshow' {
+@-o-keyframes bodyshow {
     0% {
         top: -60px;
         opacity: 0;
@@ -74,7 +74,7 @@
         opacity: 1;
     }
 }
-@keyframes 'bodyshow' {
+@keyframes bodyshow {
     0% {
         top: -60px;
         opacity: 0;
@@ -153,15 +153,24 @@ hr.small {
     border-width: 4px;
     border-color: #fff;
 }
-a.nav-back {
+a.nav-back,
+a.nav-next {
     position: fixed;
     top: 15px;
-    left: 15px;
     color: #fff;
     z-index: 99;
 }
+a.nav-back {
+    left: 15px;
+}
+a.nav-next {
+    right: 15px;
+}
+
 a.nav-back:hover,
-a.nav-back:focus {
+a.nav-next:hover,
+a.nav-back:focus,
+a.nav-next:focus {
     color: #ce2323;
 }
 nav {
@@ -259,6 +268,7 @@ nav {
     overflow: hidden;
     display: -webkit-box;
     -webkit-line-clamp: 10;
+    line-clamp: 10;
     -webkit-box-orient: vertical;
 }
 .post-preview blockquote {
@@ -295,6 +305,7 @@ nav {
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 7;
+    line-clamp: 7;
 }
 .post-preview > a > .post-title.archive {
     font-size: 22px;
@@ -387,8 +398,6 @@ footer {
     margin: 0;
     font-size: 0.85em;
     line-height: 1.764705882em;
-    vertical-align: middle;
-    vertical-align: baseline;
     opacity: 0;
     -webkit-transition:
         top 0.3s ease,
